--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -13,7 +13,7 @@
       </tr>
       <tr>
         <th>Comment name</th>
-        <th>Commenter's email</th>
+        <th>Commentator Email</th>
         <th>Comment body</th>
       </tr>
       <tr *ngFor="let comment of getCommentsByPostId(post.id)">
