--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -5,7 +5,7 @@
       <tbody *ngFor="let post of postsSlice">
       <tr>
         <th>Post Title</th>
-        <th colspan="2">Body</th>
+        <th colspan="2">Post Body</th>
       </tr>
       <tr>
         <td class="tg-0pky">{{post.title}}</td>
